--- a/Html/index.html
+++ b/Html/index.html
@@ -46,8 +46,37 @@
 
     <section>
       <div class="vertical-border-right"></div>
+      <div class="Recipes-1">
+        <div class="img1">
+          <img src="../images/image 14.png" alt="" />
+          <span>Hot Recipes</span>
+        </div>
+
+        <div class="text">
+          <h1>spicy delicious chicken wings</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqut enim ad minim
+          </p>
+          <img src="../images/Timer (1).png" alt="" /><span>30 minutes</span>
+          <img src="../images/ForkKnife.png" alt="" /><span>chicken</span>
+        </div>
+
+        <div class="john">
+          <img src="../images/Ellipse 2.png" alt="" />
+          <h5>John Smith</h5>
+          <p>15 March 2022</p>
+        </div>
+          <div class="btn-view">
+            <p>View Recipes <i class="bx bx-play-circle"></i></p>
+          </div>
+        </div>
+      </div>
       <div>
-        <img src="" alt="" />
+        <img
+           src= "../images/baked-chicken-wings-asian-style-tomatoes-sauce-plate 1.png"
+          alt=""
+        />
       </div>
     </section>
   </body>
