--- a/Html/index.html
+++ b/Html/index.html
@@ -43,13 +43,13 @@
       </nav>
     </header>
     <hr />
-
-    <section>
-      <div class="vertical-border-right"></div>
+    <!-- ------card section -->
+    <section class="card">
+      <!-- <div class="vertical-border-right"></div> -->
       <div class="Recipes-1">
         <div class="img1">
           <img src="../images/image 14.png" alt="" />
-          <span>Hot Recipes</span>
+          <p>Hot Recipes</p>
         </div>
 
         <div class="text">
@@ -58,25 +58,42 @@
             Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqut enim ad minim
           </p>
-          <img src="../images/Timer (1).png" alt="" /><span>30 minutes</span>
+        </div>
+        <div class="Timer">
+          <button>
+            <img src="../images/Timer (1).png" alt="" /><span>30 minutes</span>
+          </button>
+          <button>
           <img src="../images/ForkKnife.png" alt="" /><span>chicken</span>
         </div>
+      </button>
 
         <div class="john">
           <img src="../images/Ellipse 2.png" alt="" />
-          <h5>John Smith</h5>
-          <p>15 March 2022</p>
-        </div>
+          <span>John Smith <br /> 15 March 2022</span>
           <div class="btn-view">
-            <p>View Recipes <i class="bx bx-play-circle"></i></p>
+            <span>View Recipes <i class="bx bx-play-circle"></i></span>
           </div>
         </div>
       </div>
       <div>
         <img
-           src= "../images/baked-chicken-wings-asian-style-tomatoes-sauce-plate 1.png"
-          alt=""
+        class="sauce-plate"
+        src="../images/baked-chicken-wings-asian-style-tomatoes-sauce-plate 1.png"
+        alt=""
         />
+      </div>
+      
+      <!-- <div class="vertical-border-left"></div> -->
+    </section>
+    <div class="badge">
+      <img src="../images/Badge.png" alt="" />
+    </div>
+
+    <section class="category"> 
+      <div class="view-all">
+          <h1>Categories</h1>
+          <p>view all categories</p>
       </div>
     </section>
   </body>
