--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- <div class="vertical-border-right"></div> -->
       <div class="Recipes-1">
         <div class="img1">
-          <img src="../images/image 14.png" alt="" />
+          <img src="./images/image 14.png" alt="" />
           <p>Hot Recipes</p>
         </div>
 
@@ -61,15 +61,15 @@
         </div>
         <div class="Timer">
           <button>
-            <img src="../images/Timer (1).png" alt="" /><span>30 minutes</span>
+            <img src="./images/Timer (1).png" alt="" /><span>30 minutes</span>
           </button>
           <button>
-          <img src="../images/ForkKnife.png" alt="" /><span>chicken</span>
+          <img src="./images/ForkKnife.png" alt="" /><span>chicken</span>
         </div>
       </button>
 
         <div class="john">
-          <img src="../images/Ellipse 2.png" alt="" />
+          <img src="./images/Ellipse 2.png" alt="" />
           <span>John Smith <br /> 15 March 2022</span>
           <div class="btn-view">
             <span>View Recipes <i class="bx bx-play-circle"></i></span>
@@ -79,7 +79,7 @@
       <div>
         <img
         class="sauce-plate"
-        src="../images/baked-chicken-wings-asian-style-tomatoes-sauce-plate 1.png"
+        src="./images/baked-chicken-wings-asian-style-tomatoes-sauce-plate 1.png"
         alt=""
         />
       </div>
@@ -87,7 +87,7 @@
       <!-- <div class="vertical-border-left"></div> -->
     </main>
     <div class="badge">
-      <img src="../images/Badge.png" alt="" />
+      <img src="./images/Badge.png" alt="" />
     </div>
 
     <section class="category"> 
@@ -96,12 +96,12 @@
           <p>view all categories</p>
       </div>
       <div class="cat-pics">
-        <img src="../images/Group 836.png" alt="">
-        <img src="../images/Group 837.png" alt="">
-        <img src="../images/Group 838.png" alt="">
-        <img src="../images/Group 839.png" alt="">
-        <img src="../images/Group 840.png" alt="">
-        <img src="../images/Group 841.png" alt="">
+        <img src="./images/Group 836.png" alt="">
+        <img src="./images/Group 837.png" alt="">
+        <img src="./images/Group 838.png" alt="">
+        <img src="./images/Group 839.png" alt="">
+        <img src="./images/Group 840.png" alt="">
+        <img src="./images/Group 841.png" alt="">
       </div>
     </section>
     
@@ -111,15 +111,15 @@
       <p>Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqut enim ad minim </p>
     </div>
     <div class="images">
-      <img src="../images/Group 858.png" alt="">
-      <img src="../images/Group 859.png" alt="">
-      <img src="../images/Group 860.png" alt="">
-      <img src="../images/Group 861.png" alt="">
-      <img src="../images/Group 845.png" alt="">
-      <img src="../images/Ads.png" alt="">
-      <img src="../images/Group 863.png" alt="">
-      <img src="../images/Group 864.png" alt="">
-      <img src="../images/Group 865.png" alt="">
+      <img src="./images/Group 858.png" alt="">
+      <img src="./images/Group 859.png" alt="">
+      <img src="./images/Group 860.png" alt="">
+      <img src="./images/Group 861.png" alt="">
+      <img src="./images/Group 845.png" alt="">
+      <img src="./images/Ads.png" alt="">
+      <img src="./images/Group 863.png" alt="">
+      <img src="./images/Group 864.png" alt="">
+      <img src="./images/Group 865.png" alt="">
     </div>
     </section>
 
@@ -130,7 +130,7 @@
       <button class="learn">Learn More</button>
       </div>
       <div class="chef-image">
-        <img src="../images/Group 880.png" alt="">
+        <img src="./images/Group 880.png" alt="">
       </div>
     </section>
   </body>
