--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <hr />
     <!-- ------card section -->
-    <main class="card">
+   <main class="card">
       <!-- <div class="vertical-border-right"></div> -->
       <div class="Recipes-1">
         <div class="img1">
@@ -76,9 +76,9 @@
           </div>
         </div>
       </div>
-      <div>
+      <div
+        class="sauce-plate">
         <img
-        class="sauce-plate"
         src="./images/baked-chicken-wings-asian-style-tomatoes-sauce-plate 1.png"
         alt=""
         />
@@ -90,47 +90,54 @@
       <img src="./images/Badge.png" alt="" />
     </div>
 
-    <section class="category"> 
+
+    <section class="category">
       <div class="view-all">
-          <h1>Categories</h1>
-          <p>view all categories</p>
+        <h1>Categories</h1>
+        <p>view all categories</p>
       </div>
       <div class="cat-pics">
-        <img src="./images/Group 836.png" alt="">
-        <img src="./images/Group 837.png" alt="">
-        <img src="./images/Group 838.png" alt="">
-        <img src="./images/Group 839.png" alt="">
-        <img src="./images/Group 840.png" alt="">
-        <img src="./images/Group 841.png" alt="">
+        <img src="./images/Group 836.png" alt="" />
+        <img src="./images/Group 837.png" alt="" />
+        <img src="./images/Group 838.png" alt="" />
+        <img src="./images/Group 839.png" alt="" />
+        <img src="./images/Group 840.png" alt="" />
+        <img src="./images/Group 841.png" alt="" />
       </div>
     </section>
-    
+
     <section class="simple-tasty">
-       <div class="simple-test">
-      <h1>Simple and tasty recipes</h1>
-      <p>Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqut enim ad minim </p>
-    </div>
-    <div class="images">
-      <img src="./images/Group 858.png" alt="">
-      <img src="./images/Group 859.png" alt="">
-      <img src="./images/Group 860.png" alt="">
-      <img src="./images/Group 861.png" alt="">
-      <img src="./images/Group 845.png" alt="">
-      <img src="./images/Ads.png" alt="">
-      <img src="./images/Group 863.png" alt="">
-      <img src="./images/Group 864.png" alt="">
-      <img src="./images/Group 865.png" alt="">
-    </div>
+      <div class="simple-test">
+        <h1>Simple and tasty recipes</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqut enim ad minim
+        </p>
+      </div>
+      <div class="images">
+        <img src="./images/Group 858.png" alt="" />
+        <img src="./images/Group 859.png" alt="" />
+        <img src="./images/Group 860.png" alt="" />
+        <img src="./images/Group 861.png" alt="" />
+        <img src="./images/Group 845.png" alt="" />
+        <img src="./images/Ads.png" alt="" />
+        <img src="./images/Group 863.png" alt="" />
+        <img src="./images/Group 864.png" alt="" />
+        <img src="./images/Group 865.png" alt="" />
+      </div>
     </section>
 
     <section class="chef">
       <div class="chef-text">
         <h1>Everyone can be a chef in their own kitchen</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqut enim ad minim </p>
-      <button class="learn">Learn More</button>
+        <p>
+          Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqut enim ad minim
+        </p>
+        <button class="learn">Learn More</button>
       </div>
       <div class="chef-image">
-        <img src="./images/Group 880.png" alt="">
+        <img src="./images/Group 880.png" alt="" />
       </div>
     </section>
   </body>
