--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqut enim ad minim
         </p>
+      </div>
         <div class="images">
           <img src="./images/Group 858.png" alt="" />
           <img src="./images/Group 859.png" alt="" />
@@ -123,7 +124,6 @@
           <img src="./images/Group 863.png" alt="" />
           <img src="./images/Group 864.png" alt="" />
           <img src="./images/Group 865.png" alt="" />
-        </div>
       </div>
     </section>
 
@@ -140,5 +140,22 @@
         <img src="./images/Group 880.png" alt="" />
       </div>
     </section>
+   
+    <section class="foodieland" >
+      <div class="foodie-test">
+        <h1>Check out @foodieland on instagram</h1>
+        <p>Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqut enim ad minim</p>
+        </div>
+        <div class="ig-images">
+          <img src="./images/Post (3).png" alt="">
+          <img src="./images/Post (2).png" alt="">
+          <img src="./images/Post (1).png" alt="">
+          <img src="./images/Post.png" alt="">
+          
+        </div>
+          <div class="btn-ig"><button>Visit Our Instagram <i class="bx bxl-instagram"></i></button></div>
+      </section>
+
   </body>
 </html>
